2008-12-04  Brian Pepple  <bpepple@fedoraproject.org>

	* Makefile.am (SUBDIRS): 
	* data/glade/main_window.glade:
	* data/main_window.xml:
	* po/POTFILES.in:
	* src/twitux-app.c (app_help_contents_cb): 
	* src/twitux-ui-utils.[ch] (twitux_help_show): 
	* configure.in: Enable help.

2008-11-04  Brian Pepple  <bpepple@fedoraproject.org>

	* Release 0.65.
	
	* configure.in:
	* NEWS:
	* TODO: Add info for release.

2008-11-03  Brian Pepple  <bpepple@fedoraproject.org>

	* data/account_dlg.xml:
	* data/prefs_dlg.xml:
	* src/twitux-account-dialog.c:
	* src/twitux-app.c:
	* src/twitux-network.[ch]:
	* src/twitux-preferences.c: Add suport for Online Accounts
	Service (Marina Zhurakhinskaya, Colin Walters)

2008-09-25  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-parser.c: Fix date parsing on 
	other than C/POSIX locale. (#2122886)

2008-09-24  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-send-message-dialog.c (message_setup): have
	textview grab focus. (#2083410)

2008-05-10  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-parser.c (parser_convert_time): Fix time issue
	w/ "1 hour" & "1 minute".  Patch by Derick Rethans. (#1961570)

2008-04-29  Daniel Morales  <daniminas@gmail.com>

	* Release 0.62.

2008-04-23  Daniel Morales  <daniminas@gmail.com>

	* data/list_dlg.xml:
	* src/twitux-lists-dialog.c: Retrive users
	timelines.

	* po/POTFILES.in: Fix XML filetypes.

2008-04-22  Daniel Morales  <daniminas@gmail.com>

	* data/lists_dialog.glade:
	* data/lists_dlg.xml:
	* src/twitux-lists-dialog.c: Add and remove users to follow.

2008-04-20  Daniel Morales  <daniminas@gmail.com>

	* data/lists_dlg.xml:
	* data/glade/lists_dialog.glade:
	* src/twitux-lists-dialog.[ch]: New files.

	* data/Makefile.am:
	* src/twitux-network.c:
	* src/Makefile.am:
	* src/twitux-app.c: Add lists dialog. It's very simple now, 
	but i think we can add some interesting functions.

2008-04-16  Brian Pepple  <bpepple@fedoraproject.org>
